# aifoundry-simulator

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .yamllint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yml  lefthook.yml  pyproject.toml
app/: __init__.py  auth.py  cli.py  config.py  content_safety.py  embeddings.py  engine.py  errors.py  main.py  pipeline.py  semantic_cache.py  state.py
app/routes/: content_safety_api.py  inference.py  management.py
contracts/: contract_matrix.yml
docs/: CONTENT-SAFETY.md  FOUNDRY-TERM-MAP.md  SCOPE.md  SEMANTIC-CACHE.md
docs/adr/: 0001-simulate-the-services-apim-defers-to.md
examples/: foundry.json
examples/apim-integration/: README.md  apim.json
scripts/: smoke_common.py  smoke_content_safety.py  smoke_foundry.py  smoke_semantic_cache.py
tests/: conftest.py  test_chat.py  test_cli.py  test_config.py  test_content_filter.py  test_content_safety_service.py  test_contract_matrix.py  test_embeddings_api.py  test_management.py  test_semantic_cache.py
