[project]
name = "aifoundry-simulator"
version = "0.1.0"
description = "Config-driven Azure AI Foundry simulator for local Docker-first testing: model deployments, semantic cache, and content safety"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "ruff>=0.8.0",
    "pyyaml>=6.0.2",
    "yamllint>=1.35.0",
]

[project.scripts]
foundrysim = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
exclude-newer = "7 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "contract(*ids): associates a test with one or more contract ids from contracts/contract_matrix.yml",
]

[tool.coverage.run]
branch = true
source = ["app"]
relative_files = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
